# Mangue-Telemetry

./: .gitignore  README.md  README_PT.md  starter.py
assets/1.0/: README.md
cpp_interface/: CMakeLists.txt
cpp_interface/.cache/clangd/index/: backend.cpp.A30CA9E8DE5FBD9D.idx  backend.h.AB3F90889110D65B.idx  main.cpp.EEA4844F64ADFB56.idx
cpp_interface/qml/: TelemetryDash.qml
cpp_interface/src/: backend.cpp  backend.h  main.cpp
interface/: index.html  package-lock.json  package.json
interface/src/: App.css  App.tsx
interface/src/components/: BarGauge.tsx  CGDiagram.tsx  CarModel.tsx  ChartGrafico.tsx  ChartPanel.tsx  LapTimer.tsx  LiveCarPanel.tsx  Mapa.tsx  Serial.tsx  Status.tsx
interface/src/context/: TelemetryContext.tsx
interface/src/hooks/: useTelemetry.ts
interface/src/pages/: Dashboard.tsx  style.css
interface/src/types/: TelemetriaData.ts
server/: README.md  main.py  requirements.txt  settings.py
server/data/: mangue_data.py
server/services/: data_processing.py  database.py  parser.py
server/simuladores/cpp/: a.out  enviar_struct_can.cpp  mqtt  mqtt_sim  mqtt_sim.cpp  serial  serial_sim  serial_sim.cpp
server/simuladores/python/: simulador.py
server/telemetry/: MQTT.py  mangue_telemetry.py  mqtt_protocol.py  telemetry_serial.py
